5-NAT.tf
resource "aws_eip" "nat" { # ading static ip to nat manually
    domain = "vpc"

    tags = {
        Name = "${local.env}-nat"
    }
}

resource "aws_nat_gateway" "nat" {
    allocation_id = aws_eip.nat.id
    subnet_id = aws_subnet.public_zone1.id

    tags = {
        Name = "${local.env}-nat"
    }

    depends_on = aws_internet_gateway.igw # wait until IGW is created
}
